[gd_scene load_steps=66 format=3 uid="uid://dms3q5eo2fqr0"]

[ext_resource type="Script" path="res://scripts/mini_boss_level.gd" id="1_m83eb"]
[ext_resource type="Script" path="res://scripts/block_area.gd" id="2_ht3mc"]
[ext_resource type="Texture2D" uid="uid://0jfc5fnjhrfs" path="res://images/mini_boss_python/__square_droid_dead_000.png" id="3_fr7s7"]
[ext_resource type="Texture2D" uid="uid://cxrj1xywtgw7q" path="res://images/mini_boss_python/__square_droid_dead_001.png" id="4_iisul"]
[ext_resource type="Texture2D" uid="uid://du8ex8h2qpbyk" path="res://images/mini_boss_python/__square_droid_dead_002.png" id="5_jm363"]
[ext_resource type="Texture2D" uid="uid://cslktm1uhsk0q" path="res://images/mini_boss_python/__square_droid_dead_003.png" id="6_uvf7q"]
[ext_resource type="Texture2D" uid="uid://dnigc4esoml3n" path="res://images/mini_boss_python/__square_droid_dead_004.png" id="7_evom3"]
[ext_resource type="Texture2D" uid="uid://bkd1jjy66t0f7" path="res://images/mini_boss_python/__square_droid_dead_005.png" id="8_ts47f"]
[ext_resource type="Texture2D" uid="uid://c784cu3sou8jv" path="res://images/mini_boss_python/__square_droid_dead_006.png" id="9_ks7ie"]
[ext_resource type="Texture2D" uid="uid://g5wknnoepuhc" path="res://images/mini_boss_python/__square_droid_dead_007.png" id="10_pnecn"]
[ext_resource type="Texture2D" uid="uid://d35appiu58dh4" path="res://images/mini_boss_python/__square_droid_dead_008.png" id="11_eskoh"]
[ext_resource type="Texture2D" uid="uid://bob8ta4oyvw8v" path="res://images/mini_boss_python/__square_droid_dead_009.png" id="12_7murn"]
[ext_resource type="Texture2D" uid="uid://brutuk274aisq" path="res://images/mini_boss_python/__square_droid_activated_idle_000.png" id="13_8ra8v"]
[ext_resource type="Texture2D" uid="uid://jj4heravw88j" path="res://images/mini_boss_python/__square_droid_activated_idle_001.png" id="14_12iye"]
[ext_resource type="Texture2D" uid="uid://dqdxghvht78nt" path="res://images/mini_boss_python/__square_droid_activated_idle_002.png" id="15_wsrfp"]
[ext_resource type="Texture2D" uid="uid://blwxgbinbjogq" path="res://images/mini_boss_python/__square_droid_activated_idle_003.png" id="16_1vkoj"]
[ext_resource type="Texture2D" uid="uid://st5fxdhiskxm" path="res://images/mini_boss_python/__square_droid_activated_idle_004.png" id="17_gtovd"]
[ext_resource type="Texture2D" uid="uid://bkuptgutt1l24" path="res://images/mini_boss_python/__square_droid_activated_idle_005.png" id="18_jsj7w"]
[ext_resource type="Texture2D" uid="uid://cahbe1glffhyq" path="res://images/mini_boss_python/__square_droid_activated_idle_006.png" id="19_ss417"]
[ext_resource type="Texture2D" uid="uid://bayer5v8lx7a5" path="res://images/mini_boss_python/__square_droid_activated_idle_007.png" id="20_chubd"]
[ext_resource type="Texture2D" uid="uid://btd2bgevqondt" path="res://images/mini_boss_python/__square_droid_activated_idle_008.png" id="21_hco4a"]
[ext_resource type="Texture2D" uid="uid://caw4y6n5kt4p3" path="res://images/mini_boss_python/__square_droid_activated_idle_009.png" id="22_stkld"]
[ext_resource type="Texture2D" uid="uid://cihmk610yxk2u" path="res://images/mini_boss_python/__square_droid_activated_idle_010.png" id="23_0kb3j"]
[ext_resource type="Texture2D" uid="uid://g5176f46vg8r" path="res://images/mini_boss_python/__square_droid_activated_idle_011.png" id="24_c4ctw"]
[ext_resource type="Texture2D" uid="uid://ddoil5hrdws4" path="res://images/mini_boss_python/__square_droid_activated_idle_012.png" id="25_x1h28"]
[ext_resource type="Texture2D" uid="uid://couh6rlvwte7u" path="res://images/mini_boss_python/__square_droid_activated_idle_013.png" id="26_wvqll"]
[ext_resource type="Texture2D" uid="uid://cfpqk0f7r87qt" path="res://images/mini_boss_python/__square_droid_activated_idle_014.png" id="27_4315f"]
[ext_resource type="Texture2D" uid="uid://xksfae7idjlh" path="res://images/mini_boss_python/__square_droid_activated_idle_015.png" id="28_6wour"]
[ext_resource type="Texture2D" uid="uid://d3v2ninv72pvl" path="res://images/mini_boss_python/__square_droid_activated_idle_016.png" id="29_1yyve"]
[ext_resource type="Texture2D" uid="uid://cfr8fcjfdm8kf" path="res://images/mini_boss_python/__square_droid_activated_idle_017.png" id="30_vsiig"]
[ext_resource type="Texture2D" uid="uid://dqjbf6il148s1" path="res://images/mini_boss_python/__square_droid_activated_idle_018.png" id="31_yqjyq"]
[ext_resource type="Texture2D" uid="uid://b4b0mlv3ktevr" path="res://images/mini_boss_python/__square_droid_activated_idle_019.png" id="32_ckh6w"]
[ext_resource type="Texture2D" uid="uid://dk351dkvfa7ts" path="res://images/mini_boss_python/__square_droid_activated_shoot_000.png" id="33_5bxom"]
[ext_resource type="Texture2D" uid="uid://cvqag5yposg2" path="res://images/mini_boss_python/__square_droid_activated_shoot_001.png" id="34_2eugu"]
[ext_resource type="Texture2D" uid="uid://db4io7kjg88gm" path="res://images/mini_boss_python/__square_droid_activated_shoot_002.png" id="35_u48bh"]
[ext_resource type="Texture2D" uid="uid://dsrnkyufrpscf" path="res://images/mini_boss_python/__square_droid_activated_shoot_003.png" id="36_ysa5n"]
[ext_resource type="Texture2D" uid="uid://bjxhj8fymgamr" path="res://images/mini_boss_python/__square_droid_activated_shoot_004.png" id="37_71mrn"]
[ext_resource type="Texture2D" uid="uid://dqgmk5kstprgm" path="res://images/mini_boss_python/__square_droid_activated_shoot_005.png" id="38_a4kmk"]
[ext_resource type="Texture2D" uid="uid://def0m2odx81g2" path="res://images/mini_boss_python/__square_droid_activated_shoot_006.png" id="39_3nopy"]
[ext_resource type="Texture2D" uid="uid://blb6ixiof1a4b" path="res://images/mini_boss_python/__square_droid_activated_shoot_007.png" id="40_f71eu"]
[ext_resource type="Texture2D" uid="uid://d10yanlmrvt7p" path="res://images/mini_boss_python/__square_droid_activated_shoot_008.png" id="41_07rtt"]
[ext_resource type="Texture2D" uid="uid://d0dwi0p4svkjn" path="res://images/mini_boss_python/__square_droid_activated_shoot_009.png" id="42_84l8i"]
[ext_resource type="PackedScene" uid="uid://dutqe76oy7gik" path="res://scenes/boss_level_components/boss_level_window.tscn" id="43_10h8r"]
[ext_resource type="Script" path="res://scripts/learning_material_scripts/python_level/quiz_code_pages/quiz_page_topic3.gd" id="44_wka1n"]
[ext_resource type="FontFile" uid="uid://b47jyqncn0ah1" path="res://fonts-and-music/fonts/quiz_code_pages_font/LibreBaskerville-Regular.ttf" id="45_p8s8x"]
[ext_resource type="Script" path="res://scripts/learning_material_scripts/python_level/quiz_code_pages/python_code_page_topic3.gd" id="46_k322k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cguhy"]
size = Vector2(963, 644)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4rqvw"]
size = Vector2(958, 640.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uvki5"]
size = Vector2(119.5, 643.5)

[sub_resource type="SpriteFrames" id="SpriteFrames_ebl7p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_fr7s7")
}, {
"duration": 1.0,
"texture": ExtResource("4_iisul")
}, {
"duration": 1.0,
"texture": ExtResource("5_jm363")
}, {
"duration": 1.0,
"texture": ExtResource("6_uvf7q")
}, {
"duration": 1.0,
"texture": ExtResource("7_evom3")
}, {
"duration": 1.0,
"texture": ExtResource("8_ts47f")
}, {
"duration": 1.0,
"texture": ExtResource("9_ks7ie")
}, {
"duration": 1.0,
"texture": ExtResource("10_pnecn")
}, {
"duration": 1.0,
"texture": ExtResource("11_eskoh")
}, {
"duration": 1.0,
"texture": ExtResource("12_7murn")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_8ra8v")
}, {
"duration": 1.0,
"texture": ExtResource("14_12iye")
}, {
"duration": 1.0,
"texture": ExtResource("15_wsrfp")
}, {
"duration": 1.0,
"texture": ExtResource("16_1vkoj")
}, {
"duration": 1.0,
"texture": ExtResource("17_gtovd")
}, {
"duration": 1.0,
"texture": ExtResource("18_jsj7w")
}, {
"duration": 1.0,
"texture": ExtResource("19_ss417")
}, {
"duration": 1.0,
"texture": ExtResource("20_chubd")
}, {
"duration": 1.0,
"texture": ExtResource("21_hco4a")
}, {
"duration": 1.0,
"texture": ExtResource("22_stkld")
}, {
"duration": 1.0,
"texture": ExtResource("23_0kb3j")
}, {
"duration": 1.0,
"texture": ExtResource("24_c4ctw")
}, {
"duration": 1.0,
"texture": ExtResource("25_x1h28")
}, {
"duration": 1.0,
"texture": ExtResource("26_wvqll")
}, {
"duration": 1.0,
"texture": ExtResource("27_4315f")
}, {
"duration": 1.0,
"texture": ExtResource("28_6wour")
}, {
"duration": 1.0,
"texture": ExtResource("29_1yyve")
}, {
"duration": 1.0,
"texture": ExtResource("30_vsiig")
}, {
"duration": 1.0,
"texture": ExtResource("31_yqjyq")
}, {
"duration": 1.0,
"texture": ExtResource("32_ckh6w")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [],
"loop": false,
"name": &"right_answer",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("33_5bxom")
}, {
"duration": 1.0,
"texture": ExtResource("34_2eugu")
}, {
"duration": 1.0,
"texture": ExtResource("35_u48bh")
}, {
"duration": 1.0,
"texture": ExtResource("36_ysa5n")
}, {
"duration": 1.0,
"texture": ExtResource("37_71mrn")
}, {
"duration": 1.0,
"texture": ExtResource("38_a4kmk")
}, {
"duration": 1.0,
"texture": ExtResource("39_3nopy")
}, {
"duration": 1.0,
"texture": ExtResource("40_f71eu")
}, {
"duration": 1.0,
"texture": ExtResource("41_07rtt")
}, {
"duration": 1.0,
"texture": ExtResource("42_84l8i")
}],
"loop": false,
"name": &"wrong_answer",
"speed": 8.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eocmm"]
bg_color = Color(0, 0.717647, 0.8, 1)

[sub_resource type="LabelSettings" id="LabelSettings_tu174"]
font = ExtResource("45_p8s8x")
font_size = 20
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8g3qe"]
font = ExtResource("45_p8s8x")
font_size = 20
font_color = Color(0, 0.717647, 0.8, 1)

[sub_resource type="LabelSettings" id="LabelSettings_e0svr"]
font = ExtResource("45_p8s8x")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_dv4lf"]
font = ExtResource("45_p8s8x")
font_size = 20
font_color = Color(1, 1, 1, 0.615686)

[sub_resource type="Animation" id="Animation_kivbn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../feedback_conatiner/panel_container/panel2/feedback_container/feedback_label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_5hlbm"]
resource_name = "text_animation"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../feedback_conatiner/panel_container/panel2/feedback_container/feedback_label:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xycbe"]
_data = {
"RESET": SubResource("Animation_kivbn"),
"text_animation": SubResource("Animation_5hlbm")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2riv2"]
bg_color = Color(0, 0.717647, 0.8, 1)

[sub_resource type="Animation" id="Animation_2vdb3"]
length = 0.001

[sub_resource type="Animation" id="Animation_fv11m"]
resource_name = "block_area"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("boss_encounter_area/boss_level_window:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-566, -538), Vector2(-576, -538), Vector2(-556, -538), Vector2(-606, -538), Vector2(-576, -538), Vector2(-566, -538)]
}

[sub_resource type="Animation" id="Animation_j55cl"]
resource_name = "display_window"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("boss_encounter_area/boss_level_window:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cwsnv"]
resource_name = "dissolve_window"
length = 2.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("boss_encounter_area/boss_level_window:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_bqsxn"]
resource_name = "quiz_to_code"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("boss_encounter_area/boss_level_window/quiz_page:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("boss_encounter_area/boss_level_window/python_code_page:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.5, 2.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vb8hw"]
_data = {
"RESET": SubResource("Animation_2vdb3"),
"block_area": SubResource("Animation_fv11m"),
"display_window": SubResource("Animation_j55cl"),
"dissolve_window": SubResource("Animation_cwsnv"),
"quiz_to_code": SubResource("Animation_bqsxn")
}

[node name="mini_boss_intro_topic1" type="Node2D"]
position = Vector2(567, 589)
script = ExtResource("1_m83eb")

[node name="block_area" type="StaticBody2D" parent="."]
script = ExtResource("2_ht3mc")

[node name="area_2d" type="Area2D" parent="block_area"]

[node name="collision_shape_2d" type="CollisionShape2D" parent="block_area/area_2d"]
show_behind_parent = true
position = Vector2(39.5, -267)
shape = SubResource("RectangleShape2D_cguhy")
debug_color = Color(0.992157, 0, 0.278431, 0.0352941)

[node name="collision_shape_2d" type="CollisionShape2D" parent="block_area"]
show_behind_parent = true
position = Vector2(40, -266.625)
shape = SubResource("RectangleShape2D_4rqvw")
debug_color = Color(1, 0.243137, 0.27451, 0.341176)

[node name="boss_encounter_area" type="Area2D" parent="."]

[node name="collision_shape_2d" type="CollisionShape2D" parent="boss_encounter_area"]
show_behind_parent = true
position = Vector2(-506.75, -268)
shape = SubResource("RectangleShape2D_uvki5")

[node name="animated_sprite_2d" type="AnimatedSprite2D" parent="boss_encounter_area"]
position = Vector2(402, -170)
scale = Vector2(0.35589, 0.350926)
sprite_frames = SubResource("SpriteFrames_ebl7p")
animation = &"idle"
autoplay = "idle"

[node name="boss_level_window" parent="boss_encounter_area" instance=ExtResource("43_10h8r")]
show_behind_parent = true
offset_left = -566.0
offset_top = -538.0
offset_right = 588.0
offset_bottom = 110.0
scale = Vector2(0.8, 0.8)
metadata/_edit_group_ = true

[node name="quiz_page" type="Control" parent="boss_encounter_area/boss_level_window"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = 2.0
offset_right = -4.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("44_wka1n")

[node name="background_color" type="ColorRect" parent="boss_encounter_area/boss_level_window/quiz_page"]
layout_mode = 0
offset_left = 6.0
offset_right = 1155.0
offset_bottom = 720.0
color = Color(1, 1, 1, 0)

[node name="question_container" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/quiz_page/background_color"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
offset_left = 107.0
offset_top = 168.0
offset_right = 1080.0
offset_bottom = 261.0
metadata/_edit_group_ = true

[node name="question_label" type="RichTextLabel" parent="boss_encounter_area/boss_level_window/quiz_page/background_color/question_container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/bold_font = ExtResource("45_p8s8x")
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true

[node name="options_container" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/quiz_page/background_color"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.466132
anchor_top = 0.5
anchor_right = 0.521833
anchor_bottom = 0.5
offset_left = -211.586
offset_top = -150.36
offset_right = 172.414
offset_bottom = 123.64
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1, 1.1)
alignment = 1
metadata/_edit_group_ = true
metadata/_edit_use_anchors_ = true

[node name="option_button1" type="Button" parent="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("45_p8s8x")
theme_override_font_sizes/font_size = 19
clip_text = true
icon_alignment = 1
expand_icon = true

[node name="option_button2" type="Button" parent="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("45_p8s8x")
theme_override_font_sizes/font_size = 19
clip_text = true
expand_icon = true

[node name="option_button3" type="Button" parent="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("45_p8s8x")
theme_override_font_sizes/font_size = 19
clip_text = true
expand_icon = true

[node name="option_button4" type="Button" parent="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("45_p8s8x")
theme_override_font_sizes/font_size = 19
clip_text = true
expand_icon = true

[node name="health_bar" type="ProgressBar" parent="boss_encounter_area/boss_level_window"]
layout_mode = 0
offset_left = 28.0
offset_top = 16.0
offset_right = 302.0
offset_bottom = 44.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_eocmm")

[node name="python_code_page" type="Control" parent="boss_encounter_area/boss_level_window"]
layout_direction = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -11.0
offset_top = -1.0
offset_right = -2.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("46_k322k")

[node name="background_color" type="ColorRect" parent="boss_encounter_area/boss_level_window/python_code_page"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 25.0
offset_right = -14.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)

[node name="code_container" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/python_code_page/background_color"]
clip_contents = true
layout_direction = 1
layout_mode = 2
offset_left = 31.0
offset_top = 44.0
offset_right = 851.0
offset_bottom = 597.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="problem_container" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/code_container"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="problem_label" type="Label" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/code_container/problem_container"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 3
text = "Problem: Determine shared rides based on ages"
label_settings = SubResource("LabelSettings_tu174")

[node name="panel" type="Panel" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/code_container"]
layout_mode = 2
size_flags_vertical = 3

[node name="line_num_container" type="HBoxContainer" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/code_container/panel"]
layout_mode = 0
offset_left = 21.0
offset_top = 20.0
offset_right = 44.0
offset_bottom = 503.0

[node name="line_number" type="Label" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/code_container/panel/line_num_container"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0.639216, 0.94902, 1)
theme_override_font_sizes/font_size = 19
text = "1

2

3

4

5


6

7

8"
label_settings = SubResource("LabelSettings_8g3qe")

[node name="code_template_conatiner" type="HBoxContainer" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/code_container/panel"]
layout_mode = 0
offset_left = 52.0
offset_top = 20.0
offset_right = 708.0
offset_bottom = 480.0

[node name="code_template_label" type="Label" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/code_container/panel/code_template_conatiner"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 100
text = "your_age = 20

friend_age = 23

# Galactic Glide: To ride this, both persons have to be exactly 21 years old

can_ride_galactic_glide =                  

# Star Spinner: To ride this, both persons' ages should be greater 
than 18 and less than 25

can_ride_star_spinner = 

print(\"Can both ride Galactic Glide?\", can_ride_galactic_glide)

print(\"Can both ride Star Spinner?\""
label_settings = SubResource("LabelSettings_e0svr")

[node name="player_answer" type="LineEdit" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/code_container/panel"]
layout_mode = 2
offset_left = 328.0
offset_top = 190.0
offset_right = 730.0
offset_bottom = 224.0
theme_override_fonts/font = ExtResource("45_p8s8x")

[node name="player_answer2" type="LineEdit" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/code_container/panel"]
layout_mode = 2
offset_left = 316.0
offset_top = 330.0
offset_right = 727.0
offset_bottom = 368.0
theme_override_fonts/font = ExtResource("45_p8s8x")

[node name="player_answer3" type="LineEdit" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/code_container/panel"]
layout_mode = 2
offset_left = 415.0
offset_top = 454.0
offset_right = 735.0
offset_bottom = 485.0
theme_override_fonts/font = ExtResource("45_p8s8x")

[node name="feedback_conatiner" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/python_code_page/background_color"]
layout_mode = 2
offset_left = 868.0
offset_top = 98.0
offset_right = 1128.0
offset_bottom = 597.0

[node name="panel_container" type="HBoxContainer" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/feedback_conatiner"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 3

[node name="panel2" type="Panel" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/feedback_conatiner/panel_container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="feedback_container" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/feedback_conatiner/panel_container/panel2"]
layout_mode = 0
offset_left = 17.0
offset_top = 14.0
offset_right = 240.0
offset_bottom = 486.0

[node name="feedback_label" type="Label" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/feedback_conatiner/panel_container/panel2/feedback_container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0.639216, 0.94902, 0.431373)
label_settings = SubResource("LabelSettings_dv4lf")
autowrap_mode = 3

[node name="animation_player" type="AnimationPlayer" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/feedback_conatiner/panel_container/panel2/feedback_container"]
root_node = NodePath("../../../../../run_button_conatiner")
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_xycbe")
}

[node name="run_button_conatiner" type="VBoxContainer" parent="boss_encounter_area/boss_level_window/python_code_page/background_color"]
layout_mode = 2
offset_left = 1014.0
offset_top = 50.0
offset_right = 1122.0
offset_bottom = 90.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.09

[node name="run_button" type="Button" parent="boss_encounter_area/boss_level_window/python_code_page/background_color/run_button_conatiner"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("45_p8s8x")
theme_override_styles/normal = SubResource("StyleBoxFlat_2riv2")
text = "Run"

[node name="animation_player" type="AnimationPlayer" parent="boss_encounter_area"]
process_priority = 2
root_node = NodePath("../..")
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_vb8hw")
}

[connection signal="wrong_answer" from="boss_encounter_area/boss_level_window/quiz_page" to="." method="player_wrong_answer"]
[connection signal="wrong_answer" from="boss_encounter_area/boss_level_window/quiz_page" to="." method="_on_quiz_page_wrong_answer"]
[connection signal="pressed" from="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container/option_button1" to="boss_encounter_area/boss_level_window/quiz_page" method="_on_option_button_1_pressed" flags=18]
[connection signal="pressed" from="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container/option_button2" to="boss_encounter_area/boss_level_window/quiz_page" method="_on_option_button_2_pressed" flags=18]
[connection signal="pressed" from="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container/option_button3" to="boss_encounter_area/boss_level_window/quiz_page" method="_on_option_button_3_pressed" flags=18]
[connection signal="pressed" from="boss_encounter_area/boss_level_window/quiz_page/background_color/options_container/option_button4" to="boss_encounter_area/boss_level_window/quiz_page" method="_on_option_button_4_pressed" flags=18]
[connection signal="all_correct" from="boss_encounter_area/boss_level_window/python_code_page" to="." method="_on_code_page_all_correct"]
[connection signal="pressed" from="boss_encounter_area/boss_level_window/python_code_page/background_color/run_button_conatiner/run_button" to="boss_encounter_area/boss_level_window/python_code_page" method="_on_run_button_pressed" flags=18]
